# launchpad-contracts

./: .gitignore  LICENSE  Makefile  README.md  cabal.project  flake.nix  hie.yaml  wingriders-plutarch.cabal
.github/workflows/: integrate.yaml
artifacts/: export-info.json  pool-proof-policy.plutus.json  project-tokens-holder-final.plutus.json  ref-script-carrier.plutus.json  rewards-fold.plutus.json  rewards-holder.plutus.json  vesting.plutus.json
catalyst-imgs/: compilation.img
docs/: README.md
scripts/: Export.hs  ExportUtils.hs
src/Launchpad/: CommitFold.hs  Constants.hs  FailProof.hs  Node.hs  PoolProof.hs  PoolTypes.hs  ProjectTokensHolderFinal.hs  ProjectTokensHolderFirst.hs  RewardsFold.hs  RewardsHolder.hs  Types.hs  Util.hs
src/Launchpad/Mint/: CommitFold.hs  FailProof.hs  Node.hs  PoolProof.hs  ProjectTokensHolder.hs  RewardsFold.hs
src/Other/: FixedSupplyPolicy.hs  FreePolicy.hs  RefScriptCarrier.hs  Vesting.hs
src/Other/Mint/: AlwaysFails.hs  FreeNft.hs
src/Plutarch/: PlutusScript.hs  Util.hs
src/Plutarch/Mint/: Util.hs
src/Plutarch/Types/: Base.hs  Classes.hs
src/Plutus/: Util.hs
test/: TestMain.hs
test/Integration/: Compile.hs  Mock.hs  Tests.hs  Util.hs  Vesting.hs
test/Integration/Launchpad/: CommitFold.hs  CommitFoldTest.hs  FailProof.hs  FailProofTest.hs  Launchpad.hs  LaunchpadTest.hs  Node.hs  NodeTest.hs  Options.hs  PoolProof.hs  PoolProofTest.hs  ProjectTokensHolderFinal.hs  ProjectTokensHolderFinalTest.hs  ProjectTokensHolderFirst.hs  RewardsFold.hs  RewardsFoldTest.hs  RewardsHolder.hs  RewardsHolderTest.hs  Validators.hs
test/Plutarch/: Test.hs
test/Test/: Util.hs
test/Unit/: Tests.hs
test/Unit/Launchpad/: CommitFold.hs  Node.hs  PoolProof.hs  RewardsFold.hs  Tests.hs  UtilFunctions.hs
